slides: hopefully NOTHING MORE TO ADD :joy:

--- a/static/index.html
+++ b/static/index.html
@@ -159,7 +159,11 @@
                 <br><b>Most trusted source</b> <em>since '90s.</em> <span style="color: rgba(255,255,255,0.6)">Manage your service.</span>
             </div>
         </section>
-        <section id="gnaf" data-background="graphics/background/gnaf-0.png"></section>
+        <section id="gnaf" data-background="graphics/background/gnaf-0.png">
+            <div style="text-align: right"><span style="font-size: large; padding: 5px 15px; color: rgba(255,255,255, 1); background-color: rgba(255,10,20,0.7); ">
+                National Critical Infrastructure!
+            </span></div>
+        </section>
         <section id="gnaf-monster-free" data-background="graphics/background/gnaf-1.png">
             <div style="background-color: rgba(0, 0, 0, 0.4); color: #fff; padding: 20px; margin-top: 5em">
                 <div style="font-size: 100%">G-NAF (2004) &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; G-NAF-Core (2022)</div>
@@ -1371,13 +1375,13 @@ async def root():
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
                 <div style="font-size: 200%">FIN</div>
             </div><br>
-            <h3>Thank you Geoscape</h3>
-            <p>Come speak at the:<br><b>Canberra Python User Group</b>
+            <p style="color: #999">Thank you <span style="color: #eee">Geoscape</span>!</p>
+            <p><span style="color: #999">Come speak at the:</span><br><b>Canberra Python User Group</b>
               <br><em style="color: #333">contact us!</em></p>
             <p>Support <b>DjangoGirls</b>
-              <br>Adelaide event on Monday!
-            <br>Canberra events
-            <br><em style="color: #333">future events TBA</em></p>
+              <br>Adelaide event on Monday here!
+            <br><span style="color: #999"><span style="color: #eee">Canberra</span> TBA</span>
+            <br><em style="color: #999">Shout out: <span style="color: #eee">PyLadiesCon</span></em></p>
         </section>
 
     </div>
